# SimpleSQLite

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  invoke_pytest.py  mypy.ini  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: ci.yml  lint_and_test.yml  publish.yml
.travis/: run_test.sh
docs/: Makefile  conf.py  conf.py.org  index.rst  installation.rst  make.bat  make_readme.py  reference.rst  usage.rst
docs/apis/: modules.rst  simplesqlite.rst
docs/pages/: installation.rst  introduction.rst  links.rst
docs/pages/examples/: create_table.rst  create_table_from_csv.txt  create_table_from_data_matrix.txt  create_table_from_excel.txt  create_table_from_gs.txt  create_table_from_json.txt  get_profile.rst  in_memory_database.rst  index.rst  insert_record.rst  insert_record_example.rst  insert_record_example.txt  update.rst
docs/pages/introduction/: badges.txt  feature.txt  index.rst  installation.rst  (+1 more)
misc/: summary.txt
requirements/: docs_requirements.txt  requirements.txt  test_requirements.txt
sample/: sample_check_connection.py  sample_create_table_from_csv.py  sample_create_table_nested_list.py  sample_data.csv  sample_get_attribute_name_list.py  sample_get_attribute_names.py  sample_get_profile.py  sample_get_sqlite_master.py  sample_get_table_name_list.py  sample_get_table_names.py  sample_has_attribute.py  sample_has_attribute_list.py  sample_has_attrs.py  sample_has_table.py  sample_insert_dict.py  sample_insert_mix_data.py  sample_update.py  sample_verify_attribute_existence.py  sample_verify_table_existence.py  select_as_dataframe.py
sample/create_table/: sample_create_table_from_csv.py  sample_create_table_from_data_matrix.py  sample_create_table_from_dataframe.py  sample_create_table_from_excel.py  sample_create_table_from_gs.py  sample_create_table_from_json.py  sample_create_table_from_json_multi.py  sample_create_table_from_json_single.py  sample_create_table_in_mem_db.py  sample_create_table_nested_list.py
sample/orm/: orm.py  simple_orm.py
sample/select/: select_as_dataframe.py  select_as_dict.py
simplesqlite/: __init__.py  __version__.py  _column.py  _common.py  _error.py  _func.py  _logger.py  _model.py  _sanitizer.py  _validator.py  converter.py  convertor.py  core.py  error.py  model.py  query.py  sqlquery.py
simplesqlite/_logger/: __init__.py  _logger.py  _null_logger.py
simplesqlite/loader/: __init__.py  acceptor.py  constant.py  data.py  error.py  formatter.py  interface.py
test/: _common.py  fixture.py  test_convertor.py  test_error.py  test_from_file.py  test_func.py  test_logger.py  test_orm.py  test_pandas.py  test_query.py  test_sanitizer.py  test_simplesqlite.py  test_sqlquery.py  test_validator.py
test/data/: Python (programming language) - Wikipedia, the free encyclopedia.html  python - Wiktionary.html
test/loader/: test_csvloader.py  test_data.py  test_excelloader.py  test_gsloader.py  test_gssloader.py  test_htmlloader.py  test_jsonloader.py
(+32 files in other folders)
