[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.black]
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
include_trailing_comma = true
known_third_party = [
  'dataproperty',
  'logbook',
  'mbstrdecoder',
  'pandas',
  'pathvalidate',
  'pytablereader',
  'pytest',
  'sphinx_rtd_theme',
  'sqliteschema',
  'tabledata',
  'typepy',
  'xlsxwriter',
]
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
  '*/.eggs/*',
  '*/.pytype/*',
  '*/.tox/*',
]

[tool.coverage.run]
branch = true
source = ['simplesqlite']

[tool.coverage.report]
exclude_lines = [
  'except ImportError',
  'raise NotImplementedError',
  'pass',
  'ABCmeta',
  'abstractmethod',
  'abstractproperty',
  'abstractclassmethod',
  'warnings.warn',
]
precision = 1
show_missing = true

[tool.mypy]
ignore_missing_imports = true
python_version = 3.7

pretty = true

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["test"]

md_report = true
md_report_color = "auto"
md_report_verbose = 0
md_report_zeros = "number"
